--- a/discrimination_participant_exclusion.ipynb
+++ b/discrimination_participant_exclusion.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 402,
+   "execution_count": 472,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 403,
+   "execution_count": 473,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,14 +48,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 404,
+   "execution_count": 474,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1061\n"
+      "1066\n"
      ]
     }
    ],
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 405,
+   "execution_count": 475,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 406,
+   "execution_count": 476,
    "metadata": {},
    "outputs": [
     {
@@ -107,7 +107,7 @@
        "False"
       ]
      },
-     "execution_count": 406,
+     "execution_count": 476,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 407,
+   "execution_count": 477,
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 408,
+   "execution_count": 478,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 409,
+   "execution_count": 479,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 410,
+   "execution_count": 480,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 411,
+   "execution_count": 481,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,16 +237,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 412,
+   "execution_count": 482,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1054"
+       "1060"
       ]
      },
-     "execution_count": 412,
+     "execution_count": 482,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -258,22 +258,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 413,
+   "execution_count": 483,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "array([  24,   28,   31,   38,   45,   33,   35,   34,   55,   27,   32,\n",
-       "         40,   51,   58,   29,   36,   46,   25,   42,   48,   30,   37,\n",
-       "         41,   26,   53,   50,   64, 1997,   61,   57,   47,   22,   23,\n",
+       "         50,   40,   51,   58,   29,   36,   46,   25,   42,   48,   30,\n",
+       "         37,   41,   26,   53,   64, 1997,   61,   57,   47,   22,   23,\n",
        "         70, 1970, 1994,   56,   59,   52,   44,   21,   43,   69, 1974,\n",
        "         62,   49, 1990,   65, 1989,   39, 1960, 1965,   60, 1976,   63,\n",
        "         19,   54, 1985,   67,   20, 1971, 1963,   66, 1980,   77,   76,\n",
        "         71, 1973,   68, 1966, 1959, 1964])"
       ]
      },
-     "execution_count": 413,
+     "execution_count": 483,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 414,
+   "execution_count": 484,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 415,
+   "execution_count": 485,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 416,
+   "execution_count": 486,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -396,14 +396,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 417,
+   "execution_count": 487,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of participants that did not pass the catch trial check: 574\n"
+      "Number of participants that did not pass the catch trial check: 578\n"
      ]
     }
    ],
@@ -413,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 418,
+   "execution_count": 488,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -422,20 +422,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 419,
+   "execution_count": 489,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([  28,   31,   38,   45,   33,   35,   34,   27,   40,   51,   58,\n",
-       "         29,   36,   42,   55,   37,   25,   26,   50,   53,   61,   22,\n",
+       "array([  28,   31,   38,   45,   33,   35,   34,   27,   50,   40,   51,\n",
+       "         58,   29,   36,   42,   55,   37,   25,   26,   53,   61,   22,\n",
        "         46,   24, 1970,   30,   41,   56,   52,   44,   32,   43,   69,\n",
        "         47,   48,   62,   49,   64, 1989,   39,   21,   60,   63,   65,\n",
        "         57,   20,   67,   59,   66, 1980,   77,   54,   76,   23,   68])"
       ]
      },
-     "execution_count": 419,
+     "execution_count": 489,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -454,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 420,
+   "execution_count": 490,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -502,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 421,
+   "execution_count": 491,
    "metadata": {},
    "outputs": [
     {
@@ -521,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 422,
+   "execution_count": 492,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -555,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 424,
+   "execution_count": 493,
    "metadata": {},
    "outputs": [
     {
@@ -563,7 +563,7 @@
      "output_type": "stream",
      "text": [
       "Number of Participants with >= 10% trials removed: 0\n",
-      "Number of participants left: 465\n"
+      "Number of participants left: 467\n"
      ]
     }
    ],
@@ -574,16 +574,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 425,
+   "execution_count": 494,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "465"
+       "467"
       ]
      },
-     "execution_count": 425,
+     "execution_count": 494,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -609,14 +609,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 426,
+   "execution_count": 495,
    "metadata": {},
    "outputs": [],
    "source": [
     "# set the version for the sequence tracking \n",
     "\n",
-    "prev_version = 'v9'\n",
-    "new_version = 'v10'\n",
+    "prev_version = 'v11'\n",
+    "new_version = 'v12'\n",
     "\n",
     "# select path for the last previous sequence tracking file \n",
     "\n",
@@ -625,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 427,
+   "execution_count": 496,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -634,16 +634,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 428,
+   "execution_count": 497,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of sequences previously sampled:  464\n",
-      "Number of sequences sampled now:  465 465\n",
-      "Number of sequences to be sampled:  3\n",
+      "Number of sequences previously sampled:  466\n",
+      "Number of sequences sampled now:  467 467\n",
+      "Number of sequences to be sampled:  1\n",
       "Number sampled + to be sampled = 468:  True\n"
      ]
     }
@@ -698,7 +698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 358,
+   "execution_count": 463,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -714,16 +714,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 429,
+   "execution_count": 498,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(3, True)"
+       "(1, True)"
       ]
      },
-     "execution_count": 429,
+     "execution_count": 498,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -747,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 430,
+   "execution_count": 499,
    "metadata": {},
    "outputs": [
     {
@@ -853,7 +853,7 @@
        "[468 rows x 2 columns]"
       ]
      },
-     "execution_count": 430,
+     "execution_count": 499,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -866,18 +866,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 431,
+   "execution_count": 500,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['Discrim250_randls_0.json',\n",
-       " 'Discrim125_randls_73_rotated.json',\n",
-       " 'Discrim125_randls_19_rotated.json']"
+       "['Discrim125_randls_73_rotated.json']"
       ]
      },
-     "execution_count": 431,
+     "execution_count": 500,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -889,16 +887,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 432,
+   "execution_count": 501,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(0, 1, 2)"
+       "(0, 0, 1)"
       ]
      },
-     "execution_count": 432,
+     "execution_count": 501,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -933,7 +931,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 433,
+   "execution_count": 502,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -945,17 +943,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 434,
+   "execution_count": 503,
    "metadata": {},
    "outputs": [],
    "source": [
     "# number for the NEXT batch \n",
-    "batch = 13"
+    "batch = 15"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 435,
+   "execution_count": 504,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -973,7 +971,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 436,
+   "execution_count": 505,
    "metadata": {},
    "outputs": [],
    "source": [
