--- a/discrimination_participant_exclusion.ipynb
+++ b/discrimination_participant_exclusion.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 472,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 473,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,14 +48,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 474,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1066\n"
+      "1070\n"
      ]
     }
    ],
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 475,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 476,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [
     {
@@ -107,7 +107,7 @@
        "False"
       ]
      },
-     "execution_count": 476,
+     "execution_count": 129,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -118,15 +118,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 477,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2\n",
-      "2\n"
+      "3\n",
+      "3\n"
      ]
     }
    ],
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 478,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 479,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 480,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 481,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,16 +237,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 482,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1060"
+       "1062"
       ]
      },
-     "execution_count": 482,
+     "execution_count": 136,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 483,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [
     {
@@ -273,7 +273,7 @@
        "         71, 1973,   68, 1966, 1959, 1964])"
       ]
      },
-     "execution_count": 483,
+     "execution_count": 137,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 484,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 485,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 486,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -396,14 +396,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 487,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of participants that did not pass the catch trial check: 578\n"
+      "Number of participants that did not pass the catch trial check: 579\n"
      ]
     }
    ],
@@ -413,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 488,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 489,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [
     {
@@ -430,12 +430,12 @@
       "text/plain": [
        "array([  28,   31,   38,   45,   33,   35,   34,   27,   50,   40,   51,\n",
        "         58,   29,   36,   42,   55,   37,   25,   26,   53,   61,   22,\n",
-       "         46,   24, 1970,   30,   41,   56,   52,   44,   32,   43,   69,\n",
-       "         47,   48,   62,   49,   64, 1989,   39,   21,   60,   63,   65,\n",
+       "         46, 1970,   30,   41,   56,   52,   44,   32,   43,   69,   47,\n",
+       "         48,   62,   49,   64, 1989,   39,   21,   60,   63,   65,   24,\n",
        "         57,   20,   67,   59,   66, 1980,   77,   54,   76,   23,   68])"
       ]
      },
-     "execution_count": 489,
+     "execution_count": 143,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -454,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 490,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -502,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 491,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [
     {
@@ -521,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 492,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -555,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 493,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [
     {
@@ -563,7 +563,7 @@
      "output_type": "stream",
      "text": [
       "Number of Participants with >= 10% trials removed: 0\n",
-      "Number of participants left: 467\n"
+      "Number of participants left: 468\n"
      ]
     }
    ],
@@ -574,16 +574,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 494,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "467"
+       "468"
       ]
      },
-     "execution_count": 494,
+     "execution_count": 148,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -604,57 +604,85 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Update Sequence Sampling "
+    "## Update Sequence Sampling \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 495,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# set the version for the sequence tracking \n",
-    "\n",
-    "prev_version = 'v11'\n",
-    "new_version = 'v12'\n",
-    "\n",
-    "# select path for the last previous sequence tracking file \n",
-    "\n",
-    "sequence_sampling_path = '/Users/prachimahableshwarkar/Documents/GW/FacialAge/FacialAge_MTurk/BNav_EC2/DepthDuration/v2_depth_discrimination_MTurk/sequence_tracking/'+ prev_version + '_Discrim_master_sequence_tracking.json'\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 496,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# new_sequence_sampling"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 497,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of sequences previously sampled:  466\n",
-      "Number of sequences sampled now:  467 467\n",
-      "Number of sequences to be sampled:  1\n",
+      "/Users/prachimahableshwarkar/Documents/GW/FacialAge/FacialAge_MTurk/BNav_EC2/DepthDuration/v2_depth_discrimination_MTurk/sequence_tracking/v15_Discrim_master_sequence_tracking.json\n"
+     ]
+    }
+   ],
+   "source": [
+    "# set the version for the sequence tracking \n",
+    "\n",
+    "prev_version = 'v15'\n",
+    "new_version = 'v16'\n",
+    "\n",
+    "# select path for the last previous sequence tracking file \n",
+    "\n",
+    "sequence_sampling_path = '/Users/prachimahableshwarkar/Documents/GW/FacialAge/FacialAge_MTurk/BNav_EC2/DepthDuration/v2_depth_discrimination_MTurk/sequence_tracking/'+ prev_version + '_Discrim_master_sequence_tracking.json'\n",
+    "print(sequence_sampling_path)\n",
+    "# Opening JSON file\n",
+    "f = open(sequence_sampling_path)\n",
+    "  \n",
+    "# returns JSON object as a dictionary\n",
+    "sequence_sampling = json.load(f)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 150,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 150,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sequence_sampling[\"Discrim250_randls_48.json\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 151,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of sequences previously sampled:  467\n",
+      "Number of sequences sampled now:  468 468\n",
+      "Number of sequences to be sampled:  0\n",
       "Number sampled + to be sampled = 468:  True\n"
      ]
     }
    ],
    "source": [
     "\n",
-    "# Opening JSON file\n",
-    "f = open(sequence_sampling_path)\n",
-    "  \n",
-    "# returns JSON object as a dictionary\n",
-    "sequence_sampling = json.load(f)\n",
     "# print number of sequences that have been sampled by the previous batch\n",
     "prev_sampled_count = 0\n",
     "for seq in sequence_sampling:\n",
@@ -698,7 +726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 463,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -714,16 +742,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 498,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(1, True)"
+       "(0, True)"
       ]
      },
-     "execution_count": 498,
+     "execution_count": 152,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -747,7 +775,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 499,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [
     {
@@ -853,7 +881,7 @@
        "[468 rows x 2 columns]"
       ]
      },
-     "execution_count": 499,
+     "execution_count": 153,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -866,16 +894,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 500,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['Discrim125_randls_73_rotated.json']"
+       "[]"
       ]
      },
-     "execution_count": 500,
+     "execution_count": 154,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -887,16 +915,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 501,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(0, 0, 1)"
+       "(0, 0, 0)"
       ]
      },
-     "execution_count": 501,
+     "execution_count": 155,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -931,7 +959,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 502,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -943,17 +971,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 503,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [],
    "source": [
     "# number for the NEXT batch \n",
-    "batch = 15"
+    "batch = 17"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 504,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -971,7 +999,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 505,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [],
    "source": [
